database connection done now login page is done with show password and checkcredentials only go to dashboard when email and password is correct after verification from database and all types of user will go to dashboard either manager admin or quality analyst

--- a/src/main/webapp/add-employee.html
+++ b/src/main/webapp/add-employee.html
@@ -111,7 +111,7 @@
 								<div class="col-md-4">
 									<div class="form-group">
 										<label>Salary</label>
-										<input type="text" class="form-control" id="usr" required> </div>
+										<input type="text" class="form-control" id="usr3" required> </div>
 								</div>
 								<div class="col-md-4">
 									<div class="form-group">
