--- a/src/main/webapp/rate-product.html
+++ b/src/main/webapp/rate-product.html
@@ -23,8 +23,8 @@
 	<div class="main-wrapper">
 		<div class="header">
 			<div class="header-left">
-				<b><a href="index.html" class="logo"> <span class="logoclass">ERP</span> </a></b>
-				<b><a href="index.html" class="logo logo-small" style="font-size: large; color:#009688;">ERP</a></b>
+				<b><a href="dashboard.jsp" class="logo"> <span class="logoclass">ERP</span> </a></b>
+				<b><a href="dashboard.jsp" class="logo logo-small" style="font-size: large; color:#009688;">ERP</a></b>
 			</div>
 			<a href="javascript:void(0);" id="toggle_btn"> <i class="fe fe-text-align-left"></i> </a>
 			<a class="mobile_btn" id="mobile_btn"> <i class="fas fa-bars"></i> </a>
@@ -48,7 +48,7 @@
 			<div class="sidebar-inner slimscroll">
 				<div id="sidebar-menu" class="sidebar-menu">
 					<ul>
-						<li class="active"> <a href="index.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a> </li>
+						<li class="active"> <a href="dashboard.jsp"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a> </li>
 						<li class="list-divider"></li>
 						<li class="submenu"> <a href="#"><i class="fas fa-user"></i> <span>Employee</span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
@@ -60,13 +60,13 @@
 						<li class="submenu"> <a href="#"><i class="fa-solid fa-bars"></i></fa-solid><span>Products</span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
 								<li><a href="all-products.jsp">All Products </a></li>
-								<li><a href="add-product.html"> Add Product </a></li>
+								<li><a href="add-product.jsp"> Add Product </a></li>
 							</ul>
 						</li>
 						<li class="submenu"> <a href="#"><i class="fas fa-suitcase"></i> <span>Materials</span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
 								<li><a href="all-materials.jsp"> All Materials </a></li>
-								<li><a href="create-materials.html"> Add Material </a></li>
+								<li><a href="add-material.jsp"> Add Material </a></li>
 								
 							</ul>
 						</li>
