--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -43,7 +43,7 @@
                                 <p class="text-muted mb-0">Administrator</p>
                             </div>
                         </div> <a class="dropdown-item" href="profile.html">My Profile</a><a class="dropdown-item"
-                            href="login.html">Logout</a>
+                            href="index.jsp">Logout</a>
                     </div>
                 </li>
             </ul>
@@ -84,7 +84,14 @@
                                     Material</span> <span class="menu-arrow"></span></a>
                             <ul class="submenu_class" style="display: none;">
                                 <li><a href="all-orders.jsp">All Orders </a></li>
-                                <li><a href="add-order.html"> Add Order </a></li>
+                                <li><a href="add-order.jsp"> Add Order </a></li>
+                            </ul>
+                        </li>
+                        <li class="submenu"> <a href="#"><i class="fa fa-industry"></i> <span>Vendors</span> <span class="menu-arrow"></span></a>
+                            <ul class="submenu_class" style="display: none;">
+                                <li><a href="all-vendors.jsp"> All Vendors </a></li>
+                                <li><a href="add-vendors.jsp"> Add Vendors </a></li>
+
                             </ul>
                         </li>
                         <li class="submenu"> <a href="#"><i class="fa-solid fa-star"></i><span>Quality</span> <span
