--- a/src/main/webapp/rate-product.html
+++ b/src/main/webapp/rate-product.html
@@ -108,6 +108,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="disable.js"></script>
 	<script data-cfasync="false" src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 	<script src="assets/js/jquery-3.5.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
