--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -58,6 +58,11 @@
 								<li><a href="add-product.jsp"> Add Product </a></li>
 							</ul>
 						</li>
+                        <li class="submenu"> <a href="#"><i class="fa-solid fa-file"></i><span>Tasks</span> <span class="menu-arrow"></span></a>
+							<ul class="submenu_class" style="display: none;">
+								<li><a href="add-task.html">Add Task</a></li>
+							</ul>
+						</li>
 						<li class="submenu"> <a href="#"><i class="fas fa-suitcase"></i> <span>Materials</span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
 								<li><a href="all-materials.jsp"> All Materials </a></li>
