--- a/src/main/webapp/rate-product.html
+++ b/src/main/webapp/rate-product.html
@@ -76,10 +76,18 @@
 								<li><a href="add-order.jsp"> Add Order </a></li>
 							</ul>
 						</li>
+
 						<li class="submenu"> <a href="#"><i class="fa fa-industry"></i> <span>Vendors</span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
 								<li><a href="all-vendors.jsp"> All Vendors </a></li>
 								<li><a href="add-vendors.jsp"> Add Vendors </a></li>
+
+							</ul>
+						</li>
+						<li class="submenu"> <a href="#"><i class="fa fa-industry"></i> <span>Tasks</span> <span class="menu-arrow"></span></a>
+							<ul class="submenu_class" style="display: none;">
+								<li><a href="all-tasks.jsp"> All Tasks </a></li>
+								<li><a href="add-task.jsp"> Add Task </a></li>
 
 							</ul>
 						</li>
