--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -26,7 +26,7 @@
 						<div class="login-right-wrap">
 							<h1>Signup</h1>
 							<p class="account-subtitle">Create a New Account</p>
-							<form action="index.html">
+							<form action="profile.html">
 								<div class="form-group">
 									<input class="form-control" type="text" placeholder="Email"> </div>
 								<div class="form-group">
