--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-	<title>Hotel Dashboard Template</title>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+	<title>ERP</title>
+	<link rel="shortcut icon" type="image/x-icon" href="download.png">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/plugins/fontawesome/css/fontawesome.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/plugins/fontawesome/css/all.min.css">
@@ -26,14 +26,16 @@
 						<div class="login-right-wrap">
 							<h1>Signup</h1>
 							<p class="account-subtitle">Create a New Account</p>
-							<form action="index.html">
+							<form action="profile.html">
 								<div class="form-group">
 									<input class="form-control" type="text" placeholder="Email"> </div>
 								<div class="form-group">
 									<input class="form-control" type="text" placeholder="Password"> </div>
                                 <div class="form-group">
                                     <input class="form-control" type="text" placeholder="Confirm Password"> </div>
-								<div class="form-group">
+								<div class="text-center dont-have">Already have an Account   <a href="index.jsp"
+									style="color: red;">Login</a></div>
+								<div class="form-group my-2">
 									<button class="btn btn-primary btn-block" type="submit">Signup</button>
 								</div>
 							</form>
