--- a/src/main/webapp/add-task.html
+++ b/src/main/webapp/add-task.html
@@ -107,17 +107,17 @@
                                 <div class="col-md-5">
                                     <div class="form-group">
                                         <label>Task ID</label>
-                                        <input name = "id"  class="form-control" type="number"  value="" required> </div>
+                                        <input name = "id"  class="form-control" type="number" placeholder="1" value="" required> </div>
                                 </div>
                                 <div class="col-md-5">
                                     <div class="form-group">
                                         <label>Task Name</label>
-                                        <input name = "name"  class="form-control" type="text"  value="" required> </div>
+                                        <input name = "name"  class="form-control" type="text" placeholder="stiching" value="" required> </div>
                                 </div>
                                 <div class="col-md-5">
                                     <div class="form-group">
                                         <label>Status</label>
-                                        <input name = "name"  class="form-control" type="text"  value="" required> </div>
+                                        <input name = "name" placeholder="pending /completed /inProgress" class="form-control" type="text"  value="" required> </div>
                                 </div>
                                 <div class="col-md-5">
                                     <div class="form-group">
