--- a/src/main/webapp/assign-task.html
+++ b/src/main/webapp/assign-task.html
@@ -108,12 +108,12 @@
                                 <div class="col-md-5">
                                     <div class="form-group">
                                         <label>Order ID</label>
-                                        <input name = "id"  class="form-control" type="number"  value="" required> </div>
+                                        <input name = "id"  class="form-control" type="number" placeholder="1"  value="" required> </div>
                                 </div>
                                 <div class="col-md-5">
                                     <div class="form-group">
                                         <label>Employee ID</label>
-                                        <input name = "name"  class="form-control" type="text"  value="" required> </div>
+                                        <input name = "name"  class="form-control" type="number" placeholder="5"  value="" required> </div>
                                 </div>
                             </div>
                             <button class="btn btn-primary btn-block" type="submit" style="width: 20%;">Assign Task</button>
