--- a/src/main/webapp/newall-employees.html
+++ b/src/main/webapp/newall-employees.html
@@ -231,7 +231,7 @@
 								<input type="text" placeholder="lahore"/>
 							</div>
 							<div class="my-3" style="display: flex;justify-content: space-between;"><p>Phone Number</p>
-								<input type="text" placeholder="0300-0000000"/>
+								<input type="number" placeholder="0300-0000000"/>
 							</div>
 							<div class="my-3" style="display: flex;justify-content: space-between;"><p>Email</p>
 								<input type="email" placeholder="ali@gmail.com"/>
@@ -240,13 +240,13 @@
 								<input type="date" value="1-1-2004"/>
 							</div>
 							<div class="my-3" style="display: flex;justify-content: space-between;"><p>Age</p>
-								<input type="text" placeholder="18"/>
+								<input type="number" placeholder="18"/>
 							</div>
 							<div class="my-3" style="display: flex;justify-content: space-between;"><p>Gender</p>
 								<input type="text" placeholder="Male"/>
 							</div>
 							<div class="my-3" style="display: flex;justify-content: space-between;"><p>Cnic</p>
-								<input type="text" placeholder="00000-00000000"/>
+								<input type="number" placeholder="00000-0000000-0"/>
 							</div>
 							<div class="my-3" style="display: flex;justify-content: space-between;"><p>date of joining</p>
 								<input type="date" value="1-1-2004"/>
