--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -188,7 +188,7 @@
 																	<div class="form-group">
 																		<label>Date of Birth</label>
 																		<div class="cal-icon">
-																			<input type="text" class="form-control" value="25-07-2004"> </div>
+																			<input type="date" class="form-control" value="25-07-2004"> </div>
 																	</div>
 																</div>
 																<div class="col-12 col-sm-6">
@@ -221,7 +221,7 @@
 																<div class="col-12 col-sm-6">
 																	<div class="form-group">
 																		<label>Zip Code</label>
-																		<input type="text" class="form-control" value="54000"> </div>
+																		<input type="number" class="form-control" value="54000"> </div>
 																</div>
 																<div class="col-12 col-sm-6">
 																	<div class="form-group">
