--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -28,11 +28,14 @@
 							<p class="account-subtitle">Create a New Account</p>
 							<form action="profile.html">
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Email"> </div>
+									<input class="form-control" type="text" placeholder="Email">
+								</div>
 								<div class="form-group">
-									<input class="form-control" type="text" placeholder="Password"> </div>
+									<input class="form-control" type="text" placeholder="Password">
+								</div>
                                 <div class="form-group">
-                                    <input class="form-control" type="text" placeholder="Confirm Password"> </div>
+                                    <input class="form-control" type="text" placeholder="Confirm Password">
+								</div>
 								<div class="text-center dont-have">Already have an Account   <a href="index.jsp"
 									style="color: red;">Login</a></div>
 								<div class="form-group my-2">
