--- a/src/main/webapp/all-quotation.html
+++ b/src/main/webapp/all-quotation.html
@@ -94,7 +94,7 @@
 				<li class="nav-item dropdown has-arrow">
 					<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"> <span class="user-img"><i class="fa-solid fa-bars"></i></span> </a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="profile.html">My Profile</a><a class="dropdown-item" href="login.html">Logout</a></div>
+						<a class="dropdown-item" href="profile.jsp">My Profile</a><a class="dropdown-item" href="login.html">Logout</a></div>
 				</li>
 			</ul>
 		
