--- a/src/main/webapp/rate-product.html
+++ b/src/main/webapp/rate-product.html
@@ -39,7 +39,7 @@
 								<h6>Soeng Souy</h6>
 								<p class="text-muted mb-0">Administrator</p>
 							</div>
-						</div> <a class="dropdown-item" href="profile.html">My Profile</a><a class="dropdown-item" href="index.jsp">Logout</a></div>
+						</div> <a class="dropdown-item" href="profile.jsp">My Profile</a><a class="dropdown-item" href="index.jsp">Logout</a></div>
 				</li>
 			</ul>
 		
