--- a/src/main/webapp/report.html
+++ b/src/main/webapp/report.html
@@ -34,7 +34,7 @@
 				<li class="nav-item dropdown has-arrow">
 					<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown"> <span class="user-img"><i class="fa-solid fa-bars"></i></span> </a>
 					<div class="dropdown-menu">
-					<a class="dropdown-item" href="profile.html">My Profile</a><a class="dropdown-item" href="index.jsp">Logout</a></div>
+					<a class="dropdown-item" href="profile.jsp">My Profile</a><a class="dropdown-item" href="index.jsp">Logout</a></div>
 				</li>
 			</ul>
 		
