rating and place order in functionalities in process

--- a/src/main/webapp/newall-employees.html
+++ b/src/main/webapp/newall-employees.html
@@ -131,7 +131,7 @@
 						</li>
 						<li class="submenu"> <a href="#"><i class="fa-solid fa-star"></i><span>Quality</span> <span class="menu-arrow"></span></a>
 							<ul class="submenu_class" style="display: none;">
-								<li><a href="report.html">Quality Report</a></li>
+								<li><a href="report.jsp">Quality Report</a></li>
 								<li><a href="rate-product.html">Rate product</a></li>
 							</ul>
 						</li>
